--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <button class="clear-btn">clear</button>
                 </div>
                 <div>
-                    <button class="btn">Submit</button>
+                    <button class="btn" id="submit-btn">Submit</button>
                     <br/>
                     <button class="btn">Save</button>
 
@@ -41,6 +41,10 @@
                 <h1>
                     Prediction
                 </h1>
+                <div>
+                    <p id="predicted-gender"></p>
+                    <p id="predicted-probability"></p>
+                </div>
             </div>
 
         </div>
