--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mr or Ms?</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="snackbar_styles.css">
     <script src="scripts.js"></script>
 
 </head>
@@ -56,6 +57,8 @@
 
         </div>
     </div>
+    <div id="snackbar" class="snackbar">Some text some message..</div>
+
 </body>
 
 </html>
