--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <div>
                     <label for="name">Name:</label>
                     <input type="text" class="name-input-field" id="name" name="name">
+                    <div id="error-message" class="error-message">error</div>
+
                 </div>
                 <div style="margin-top: 1rem; margin-bottom: 1rem;">
 
@@ -32,9 +34,9 @@
                     <button class="clear-btn">clear</button>
                 </div>
                 <div>
-                    <button class="btn" id="submit-btn">Submit</button>
+                    <button class="btn" id="submit-btn" disabled>Submit</button>
                     <br/>
-                    <button class="btn" id="save-btn">Save</button>
+                    <button class="btn" id="save-btn" disabled>Save</button>
 
                 </div>
             </div>
