loading for submit btn

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <button class="clear-btn">clear</button>
                 </div>
                 <div>
-                    <button class="btn" id="submit-btn" disabled>Submit</button>
+                    <button class="btn text-center" id="submit-btn" disabled>Submit</button>
                     <br/>
                     <button class="btn" id="save-btn" disabled>Save</button>
 
